--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 regex = "0.1.80"
 time = "0.1.44"
 hello = { path = "hello" }
-
+json = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0"
+serde_ignored = "0.1"
+serde_json = "1.0"
 
 #[workspace]
 #resolver = "2"
